Add new API count all star review from product
