# src/routes/review/reviewRoute.js
@@ -11,19 +11,21 @@ const {
 } = require('../../middleware/validationHandler');
 const {
   addReviewProduct,
+  getCountReviewStarProduct,
 } = require('./reviewController');
 const {
   addReviewProductReq,
   addReviewProductRes,
   productIdParam,
   formDataFieldsUploadConfig,
+  getCountReviewStarProductRes,
 } = require('./reviewSchema');
 const formDataFields = require('../../middleware/formDataHandler');
 
 
 const router = express.Router();
 
-// POST /api/v1/reviews
+// POST /api/v1/reviews/{productId}
 router.post(
   '/:productId',
   verifyToken,
@@ -34,6 +36,14 @@ router.post(
   validateRequest(addReviewProductReq),
   validateResponse(addReviewProductRes),
   addReviewProduct,
+);
+
+// GET /api/v1/reviews/{productId}/product
+router.get(
+  '/:productId/product',
+  validateParams(productIdParam),
+  validateResponse(getCountReviewStarProductRes),
+  getCountReviewStarProduct,
 );
 
 module.exports = router;
