# src/routes/review/reviewSchema.js
@@ -19,9 +19,20 @@ const formDataFieldsUploadConfig = [
   { name: 'feedbackImages', maxCount: 10 }, // Tối đa 10 ảnh
 ];
 
+const getCountReviewStarProductRes = createResultsSchemaResponse({
+  totalReviews: Joi.number().required(),
+  totalZeroStar: Joi.number().required(),
+  totalOneStar: Joi.number().required(),
+  totalTwoStar: Joi.number().required(),
+  totalThreeStar: Joi.number().required(),
+  totalFourStar: Joi.number().required(),
+  totalFiveStar: Joi.number().required(),
+})
+
 module.exports = {
   productIdParam,
   addReviewProductReq,
   addReviewProductRes,
   formDataFieldsUploadConfig,
+  getCountReviewStarProductRes,
 };
